# smartrobe

./: .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  Dockerfile.fashion_clip  Dockerfile.heuristic  Dockerfile.heuristics  Dockerfile.llm  Dockerfile.llm_multimodal  Dockerfile.orchestrator  Dockerfile.vision  PLAN.md  README.md  compose.yml  main.py  pyproject.toml
config/: attribute_routing.yml
database/: __init__.py  models.py  repository.py
dev/: analyze_garment_condition.py  brand.ipynb  category.ipynb  color_extract.ipynb  is_close_up.ipynb
orchestrator/: __init__.py  app.py  pyproject.toml
scripts/: test_analyze.py  validate_image_urls.py
services/fashion-clip/: Dockerfile  app.py  pyproject.toml
services/heuristic_model/: __init__.py  app.py  pyproject.toml
services/heuristic_model/heuristics/: __init__.py  app.py
services/heuristics/: Dockerfile  app.py  pyproject.toml
services/llm-multimodal/: Dockerfile  app.py  pyproject.toml
services/llm_model/: __init__.py  app.py  pyproject.toml
services/llm_model/llm_multimodal/: __init__.py  app.py
services/microsoft-florence/: Dockerfile  __init__.py  app.py  pyproject.toml
services/orchestrator/: Dockerfile  app.py  pyproject.toml
services/segmentation-rembg/: Dockerfile  app.py  pyproject.toml
services/vision_classifier/: __init__.py  app.py  pyproject.toml
services/vision_classifier/fashion_clip/: __init__.py  app.py
shared/: base_service.py  config.py  logging.py  pyproject.toml  schemas.py
shared/database/: init.sql  session.py
test-images/public-vinted/: urls.txt
