[project]
name = "smartrobe"
version = "0.1.0"
description = "Multi-Model Attribute Extraction Service for Second-Hand Clothing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Utility scripts dependencies
    "typer",  # for scripts/validate_image_urls.py
]

[project.optional-dependencies]
dev = [
    "ruff",     # linting & formatting
    "pytest",   # testing framework
    "httpx",    # for integration tests
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]