[project]
name = "smartrobe-fashion-clip"
version = "0.1.0"
description = "Fashion CLIP service - visual attribute classification from clothing images"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "pillow",
    "loguru",
    "python-multipart",
    # Add CLIP-specific dependencies here when needed
    # "torch",
    # "transformers",
    # "fashion-clip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]