[project]
name = "smartrobe-fashion-clip"
version = "0.1.0"
description = "Fashion CLIP service - visual attribute classification from clothing images"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "pillow",
    "loguru",
    "python-multipart",
    # ML dependencies for marqo-fashionSigLIP
    "torch",
    "transformers==4.50.3",
    "accelerate",
    "open-clip-torch",
    "ftfy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]