[project]
name = "smartrobe-microsoft-florence"
version = "0.1.0"
description = "Microsoft Florence-2 service - garment detection and cropping using vision transformer"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "pillow",
    "loguru",
    "python-multipart",
    "torch>=2.0.0",
    "transformers>=4.39.0,<4.50",
    "requests",
    "einops",
    "timm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
