[project]
name = "smartrobe-segmentation"
version = "0.1.0"
description = "Segmentation service - garment segmentation using rembg"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "pillow",
    "loguru",
    "python-multipart",
    "rembg[cpu]",  # Background removal library
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]